# rospix3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nodelets.xml  package.xml
.ci/: build.sh  pre_install.sh  ros.sh
.github/workflows/: melodic.yml  noetic.yml
config/: default.yaml  dynamic_reconfigure.cfg  multi.yaml
include/: c_callback_wrapper.h  clusteringapi.h
installation/: install_dependencies.sh
launch/: rospix3.launch  rospix3multi.launch
lib/x64/: Makefile  install_driver_rules.sh  lic.info  main.cpp  minipix.ini  pixet.ini
lib/x64/configs/: MiniPIX-D06-W0060.xml  MiniPIX-E04-W0060.xml  MiniPIX-H06-W0060.xml  MiniPIX-I04-W0037.xml  MiniPIX-I08-W0060.xml  MiniPIX-I11-W0049.xml  MiniPIX-K08-W0060.xml  MiniPIX-L06-W0060.xml
lib/x64/configs/MiniPIX-D06-W0060/: a.txt  b.txt  t.txt
lib/x64/configs/MiniPIX-E04-W0060/: a.txt  b.txt  c.txt  t.txt
lib/x64/configs/MiniPIX-H06-W0060/: a.txt  b.txt  c.txt  t.txt
lib/x64/configs/MiniPIX-I04-W0037/: a.txt  b.txt  c.txt  t.txt
lib/x64/configs/MiniPIX-I08-W0037/: t.txt
lib/x64/configs/MiniPIX-I08-W0060/: a.txt  c.txt
lib/x64/configs/MiniPIX-I11-W0049/: a.txt  b.txt  c.txt  t.txt
lib/x64/configs/MiniPIX-K08-W0060/: a.txt  b.txt  t.txt
lib/x64/configs/MiniPIX-L06-W0060/: a.txt  b.txt  t.txt
src/: rospix3.cpp  rospix3multisensor.cpp
