<?xml version="1.0"?>
<package format="2">

  <name>rospix3</name>
  <version>1.0.0</version>
  <description>Timepix3 ROS driver</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <depend>rad_msgs</depend>
  <depend>mrs_lib</depend>

  <export>

    <nodelet plugin="${prefix}/nodelets.xml" />

  </export>

</package>
